# LearnTensorRT

./: .gitignore  CMakeLists.txt  README.md
cc/: logging.h  main.cpp  myutils.cpp  myutils.h
cc/models/backbones/: senet.cpp  senet.h
cc/models/layers/: batchnorm.cpp  batchnorm.h
